--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 body {
   margin: 0;
   font-family: system-ui, sans-serif;
-  color: #ccc;
-}
-pre, code {
-  font-family: 'Roboto Mono', Menlo, monospace;
-  font-size: 12px;
+  color: #fff;
 }
 </style>
 <div id=root></div>
